# facial_recognition

./: .gitignore  BiographicalData.txt  CMakeLists.txt  FaceRecognition.cpp  FaceRecognition.h  FaceRecognitionTools.cpp  FaceRecognitionTools.h  ID_mat.txt  README.md  biometrics.txt  main.cpp
DB/: BiographicalData.txt  DataBase.cpp  DataBase.h  ID_mat.txt  README.md  biometrics.txt  main.cpp
FaceAligner/: Aligner.cpp  Aligner.h  FaceAligner.cpp  FaceAligner.h  FaceLandmarkDetector.cpp  FaceLandmarkDetector.h  facial_extractor_tools.cpp  facial_extractor_tools.h
FaceDescriptorExtractor/: CMakeLists.txt  FaceDescriptorExtractor.cpp  FaceDescriptorExtractor.h  README.md
FaceDetection/: CMakeLists.txt  FaceDetector_opt.cpp  FaceDetector_opt.h  main.cpp  parameters_FacDet.h
